--- a/Barbershop/index.html
+++ b/Barbershop/index.html
@@ -70,7 +70,7 @@
 			<img src="../img/terminator-index.png">
 			<h2>Фотогалерея</h2>
 			<figure class="gallery-content">
-				<a href="#"><img src="../img/gallery-preview.jpg" width="286" height="164" alt="Интерьер"></a>
+				<a href="#"><img src="../Barbershop/img/gallery-preview.jpg" width="286" height="164" alt="Интерьер"></a>
 			</figure>
 			<button class="button button_gallery gallery-button-back" type="button">Назад</button>
 			<button class="button button_gallery gallery-button-next" type="button">Вперед</button>
