--- a/Barbershop/shop.html
+++ b/Barbershop/shop.html
@@ -96,126 +96,114 @@
 			<h2 class="visually-hidden">Список средств для ухода</h2>
 			<ul class="catalog-list">
 				<li class="catalog-item">
-					<h3>
-						<a href="catalog-item-product-1.html">
+					<a href="catalog-item-product-1.html">
+						<h3>
 							<span class="catalog-category">
 								Набор для путешествий
 							</span>
 							<span class="catalog-category">
 								«Baxter of California»
-							</span>						 
-						</a>			 
-					</h3>
-					<p class="catalog-item-image">
-						<a href="catalog-item-product-1.html">
-							<img src="../img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
-						</a>
-					</p>
+							</span>										 
+						</h3>
+						<p class="catalog-item-image">							
+							<img src="../Barbershop/img/BoC-travel-kit-preview.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">						
+						</p>
+					</a>
 					<p class="catalog-item-price">
 						<b>2 900 P</b>
 						<a class="button" href="#">Купить</a>
 					</p>
 				</li>
 				<li class="catalog-item">
-					<h3>
-						<a href="catalog-item-product-2.html">
+					<a href="catalog-item-product-2.html">
+						<h3>							
 							<span class="catalog-category">
 								Увлажняющий кондиционер
 							</span>
 							<span class="catalog-category">
 								«Baxter of California»
-							</span>						 
-						</a>			 
-					</h3>
-					<p class="catalog-item-image">
-						<a href="catalog-item-product-2.html">
-							<img src="../img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
-						</a>
-					</p>
+							</span>										 
+						</h3>
+						<p class="catalog-item-image">							
+							<img src="../Barbershop/img/BoC-moisturizing-conditioner-preview.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+						</p>
+					</a>
 					<p class="catalog-item-price">
 						<b>750 P</b>
 						<a class="button" href="#">Купить</a>
 					</p>
 				</li>
 				<li class="catalog-item">
-					<h3>
-						<a href="catalog-item-product-3.html">
+					<a href="catalog-item-product-3.html">
+						<h3>							
 							<span class="catalog-category">
 								Гель для волос
 							</span>
 							<span class="catalog-category">
 								«Suavecito»
-							</span>						 
-						</a>			 
-					</h3>
-					<p class="catalog-item-image">
-						<a href="catalog-item-product-3.html">
-							<img src="../img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
-						</a>
-					</p>
+							</span>										 
+						</h3>
+						<p class="catalog-item-image">							
+							<img src="../img/../Barbershop/img/suavecito-hair-gel-preview.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">							
+						</p>
+					</a>
 					<p class="catalog-item-price">
 						<b>290 P</b>
 						<a class="button" href="#">Купить</a>
 					</p>
 				</li>
 				<li class="catalog-item">
-					<h3>
-						<a href="catalog-item-product-4.html">
+					<a href="catalog-item-product-4.html">
+						<h3>							
 							<span class="catalog-category">
 								Глина для укладки волос
 							</span>
 							<span class="catalog-category">
 								«American Crew»
-							</span>						 
-						</a>			 
-					</h3>
-					<p class="catalog-item-image">
-						<a href="catalog-item-product-4.html">
-							<img src="../img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American Crew»">
-						</a>
-					</p>
+							</span>										 
+						</h3>
+						<p class="catalog-item-image">							
+							<img src="../Barbershop/img/AC-hair-clay-preview.jpg" width="220" height="165" alt="Глина для укладки волос «American Crew»">							
+						</p>
+					</a>
 					<p class="catalog-item-price">
 						<b>500 P</b>
 						<a class="button" href="#">Купить</a>
 					</p>
 				</li>
 				<li class="catalog-item">
-					<h3>
-						<a href="catalog-item-product-5.html">
+					<a href="catalog-item-product-5.html">
+						<h3>							
 							<span class="catalog-category">
 								Гель для волос
 							</span>
 							<span class="catalog-category">
 								«American Crew»
-							</span>						 
-						</a>			 
-					</h3>
-					<p class="catalog-item-image">
-						<a href="catalog-item-product-5.html">
-							<img src="../img/product-5.jpg" width="220" height="165" alt="Гель для волос «American Crew»">
-						</a>
-					</p>
+							</span>										 
+						</h3>
+						<p class="catalog-item-image">							
+							<img src="../Barbershop/img/AC-hair-gel-preview.jpg" width="220" height="165" alt="Гель для волос «American Crew»">							
+						</p>
+					</a>
 					<p class="catalog-item-price">
 						<b>300 P</b>
 						<a class="button" href="#">Купить</a>
 					</p>
 				</li>
 				<li class="catalog-item">
-					<h3>
-						<a href="catalog-item-product-6.html">
+					<a href="catalog-item-product-6.html">
+						<h3>							
 							<span class="catalog-category">
 								Набор для бритья
 							</span>
 							<span class="catalog-category">
 								«Baxter of California»
-							</span>						 
-						</a>			 
-					</h3>
-					<p class="catalog-item-image">
-						<a href="catalog-item-product-6.html">
-							<img src="../img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
-						</a>
-					</p>
+							</span>										 
+						</h3>
+						<p class="catalog-item-image">							
+							<img src="../Barbershop/img/BoC-shaving-kit-preview.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">							
+						</p>
+					</a>
 					<p class="catalog-item-price">
 						<b>3 900 P</b>
 						<a class="button" href="#">Купить</a>
