--- a/Barbershop/index.html
+++ b/Barbershop/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Барбершоп «Бородинский»</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">	
+	<link rel="stylesheet" type="text/css" href="../Barbershop/css/style.css">	
 </head>
 <body>
 	<header class="main-header">
 		<nav class="main-mavigation">
 			<a class="main-header-logo">
-			<img src="../img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
+			<img src="../Barbershop/img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
 			</a>
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
@@ -19,7 +19,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
-				<li class="login-icon"><img src="../img/login.svg"></li>
+				<li class="login-icon"><img src="../Barbershop/img/login.svg"></li>
 				<li class="login-link">
 					<a class="login-link" href="login.html">Вход</a>
 				</li>
@@ -35,17 +35,17 @@
 			<ul class="features-list">
 				<li class="feature-item">
 					<h3>Быстро</h3>
-					<img src="../img/advantages-rhombus.svg">
+					<img src="../Barbershop/img/advantages-rhombus.svg">
 					<p>Мы делаем свою работу быстро! Два часа<br>пролетят незаметно и вы - счастливый<br>обладатель стильной стрижки-минутки!</p>					
 				</li>
 				<li class="feature-item">
 					<h3>Круто</h3>
-					<img src="../img/advantages-rhombus.svg">
+					<img src="../Barbershop/img/advantages-rhombus.svg">
 					<p>Забудьте, как вы стриглись раньше.<br>Мы сделаем из Вас звезду футбола или кино!<br>Во всяком случае внешне.</p>	
 				</li>
 				<li class="feature-item">
 					<h3>Дорого</h3>
-					<img src="../img/advantages-rhombus.svg">
+					<img src="../Barbershop/img/advantages-rhombus.svg">
 					<p>Наши мастера - профессионалы своего дела и<br>не могут стоить дешево. К тому же, разве цена<br>не дает определенный статус?</p>	
 				</li>
 			</ul>			
@@ -67,7 +67,7 @@
 		</section>
 
 		<section class="gallery">
-			<img src="../img/terminator-index.png">
+			<img src="../Barbershop/img/terminator-index.png">
 			<h2>Фотогалерея</h2>
 			<figure class="gallery-content">
 				<a href="#"><img src="../Barbershop/img/gallery-preview.jpg" width="286" height="164" alt="Интерьер"></a>
@@ -92,7 +92,7 @@
 		</section>
 
 		<section class="appointment">
-			<img src="../img/terminator-index.png">
+			<img src="../Barbershop/img/terminator-index.png">
 			<h2>Записаться</h2>
 			<p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с Вами для подтверждения брони</p>		
 			<form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
@@ -128,9 +128,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#"><img src="../img/vk.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="../img/facebook.svg.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="../img/instagram.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/vk.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/facebook.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/instagram.svg.svg"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
@@ -167,7 +167,7 @@
 	<section class="modal modal-map">
 		<h2 class="visually-hidden">Как до нас добраться</h2>
 		<p>
-			<img src="../img/map.jpg" width="780" height="560" alt="Офис компании находится по адресы ул. Большая Конюшенная 19/8, Санки-Петербург">
+			<img src="../Barbershop/img/map.jpg" width="780" height="560" alt="Офис компании находится по адресы ул. Большая Конюшенная 19/8, Санки-Петербург">
 		</p>
 		<button class="modal-close" type="button">Закрыть</button>
 	</section>
