--- a/Barbershop/item.html
+++ b/Barbershop/item.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Набор для путешествий «Baxter of California»</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="../Barbershop/css/style.css">
 </head>
 <body>
 	<header class="main-header">
 		<nav class="main-mavigation">
 			<a class="main-header-logo" href="index.html">
-				<img src="../img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>			
+				<img src="../Barbershop/img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>			
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="news.html">Новости</a></li>
@@ -18,7 +18,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
-				<li class="login-icon"><img src="../img/login.svg"></li>
+				<li class="login-icon"><img src="../Barbershop/img/login.svg"></li>
 				<li class="login-link">Вход</li>
 			</ul>
 		</nav>
@@ -28,21 +28,21 @@
 		<h1 class="page-title">Набор для путешествий «Baxter of California»</h1>
 
 		<ul class="breadcrumbs">
-			<li><a href="index.html"></a>Главная</li>
-			<li><a href="catalog.html"></a>Магазин</li>
-			<li><a href="haircare.html"></a>Средства для ухода</li>
-			<li class="breadcrumbs-current">Набор для путешествий «Baxter of California»</li>
+			<li><a href="index.html">Главная</a></li>
+			<li><a href="catalog.html">Магазин</a></li>
+			<li><a href="haircare.html">Средства для ухода</a></li>
+			<li class="breadcrumbs-current"><a href="#">Набор для путешествий «Baxter of California»</a></li>
 		</ul>
 		
 		<section class="product-photos">
 			<h2 class="visually-hidden">Изображение товара</h2>
 			<p class="product-photo-full">
-				<img src="../img/product-big.jpg" width="460" height="498" alt="Фото всего набора">				
+				<img src="../Barbershop/img/product-big.jpg" width="460" height="498" alt="Фото всего набора">				
 			</p>
 			<ul class="product-photo-preview">
-				<li><img src="../img/product-small-1.jpg" width="140" height="149" alt="Фото анфас"></li>
-				<li><img src="../img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль"></li>
-				<li><img src="../img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части"></li>	
+				<li><img src="../Barbershop/img/product-small-1.jpg" width="140" height="149" alt="Фото анфас"></li>
+				<li><img src="../Barbershop/img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль"></li>
+				<li><img src="../Barbershop/img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части"></li>	
 			</ul>
 		</section>
 
@@ -76,9 +76,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#"><img src="../img/vk.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="../img/facebook.svg.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="../img/instagram.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/vk.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/facebook.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/instagram.svg"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
