--- a/Barbershop/shop.html
+++ b/Barbershop/shop.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Магазин</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="../Barbershop/css/style.css">
 </head>
 <body>
 	<header class="main-header">
 		<nav class="main-mavigation">
 			<a class="main-header-logo" href="index.html">
-				<img src="../img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>			
+				<img src="../Barbershop/img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>			
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="news.html">Новости</a></li>
@@ -18,7 +18,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
-				<li class="login-icon"><img src="../img/login.svg"></li>
+				<li class="login-icon"><img src="../Barbershop/img/login.svg"></li>
 				<li class="login-link">Вход</li>
 			</ul>
 		</nav>
@@ -28,9 +28,9 @@
 		<h1 class="page-title">Средства для ухода</h1>
 
 		<ul class="breadcrumbs">
-			<li><a href="index.html"></a>Главная</li>
-			<li><a href="catalog.html"></a>Магазин</li>
-			<li class="breadcrumbs-current">Средства для ухода</li>
+			<li><a href="index.html">Главная</a></li>
+			<li><a href="catalog.html">Магазин</a></li>
+			<li class="breadcrumbs-current"><a href="#">Средства для ухода</a></li>
 		</ul>
 
 		<section class="filters">
@@ -144,7 +144,7 @@
 							</span>										 
 						</h3>
 						<p class="catalog-item-image">							
-							<img src="../img/../Barbershop/img/suavecito-hair-gel-preview.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">							
+							<img src="../Barbershop/img/suavecito-hair-gel-preview.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">							
 						</p>
 					</a>
 					<p class="catalog-item-price">
@@ -231,9 +231,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#"><img src="../img/vk.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="../img/facebook.svg.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="../img/instagram.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/vk.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/facebook.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/instagram.svg"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
