--- a/Barbershop/shop.html
+++ b/Barbershop/shop.html
@@ -40,7 +40,7 @@
 
 				<fieldset>
 					<legend>Производители:</legend>
-					<ul>
+					<ul class="checkbox-list">
 						<li class="filter-option">
 							<label for="filter-baxter-of-california">Baxter of California</label>
 							<input class="visually-hidden filter-input filter-input-checkbox" id="filter-baxter-of-california" type="checkbox" name="baxter-of-california" checked>							
@@ -70,7 +70,7 @@
 
 				<fieldset>
 					<legend>Группы товаров:</legend>
-					<ul>
+					<ul class="radio-list">
 						<li class="filter-option">
 							<label for="filter-shave">Бритвенные принадлежности</label>
 							<input class="visually-hidden filter-input filter-input-radio" id="filter-shave" type="radio" name="product-group" value="shaving">							
