--- a/Barbershop/item.html
+++ b/Barbershop/item.html
@@ -56,7 +56,7 @@
 				<a class="button" href="#">Купить</a>
 			</p>
 			<h3>В набор входят:</h3>
-			<ul>
+			<ul class="product-equipment">
 				<li>Средство для умывания (50 мл)</li>
 				<li>Увлажняющий крем (50 мл)</li>
 				<li>Крем для бритья (50 мл)</li>
