--- a/Barbershop/shop.html
+++ b/Barbershop/shop.html
@@ -19,7 +19,11 @@
 			</ul>
 			<ul class="user-navigation">
 				<li class="login-icon"><img src="../Barbershop/img/login.svg"></li>
-				<li class="login-link" href="login.html>Вход</li>
+				<li class="login-link">
+					<form action="https://echo.nerds.ru" method="post">
+						<button type="submit">Вход</button>
+					</form>
+				</li>
 			</ul>
 		</nav>
 	</header>
@@ -231,9 +235,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#"><img src="../Barbershop/img/vk.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="../Barbershop/img/facebook.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="../Barbershop/img/instagram.svg"></a></li>
+				<li><a class="social-button" href="https://vk.com"><img src="../Barbershop/img/vk.svg" alt="Вконтакте"></a></li>
+				<li><a class="social-button" href="https://www.facebook.com/"><img src="../Barbershop/img/facebook.svg" alt="Фейсбук"></a></li>
+				<li><a class="social-button" href="https://www.instagram.com"><img src="../Barbershop/img/instagram.svg" alt="Инстаграм"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
