--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -8,11 +8,11 @@
 <body>
 	<header class="main-header">
 		<nav class="main-mavigation">
-			<a class="header-logo"><img src="img/logo1.svg" width="150" height="40" alt="Логотип дизайн-студии NЁRDS"></a>
+			<a class="header-logo"><img src="../Nerds/img/logo1.svg" width="150" height="40" alt="Логотип дизайн-студии NЁRDS"></a>
 			<ul class="site-navigation">
-				<li><a href="info.html">Студия</a></li>
+				<li class="site-navigation-current"><a href="index.html">Студия</a></li>
 				<li><a href="clients.html">Клиенты</a></li>
-				<li><a href="shop.html">Магазин</a></li>
+				<li><a href="catalog.html.html">Магазин</a></li>
 				<li><a href="contacts.html">Контакты</a></li>
 				<li><a href="buy.html">Корзина</a></li>
 			</ul>
@@ -35,10 +35,8 @@
 					<p class="slider-text">Математически выверенный дизайн<br>
 						для вашего сайта или мобильного приложения						
 					</p>
-					<form action="https//:www.nerds.ru/info.html">
-						<button type="submit">Узнать больше</button>
-					</form>
-					<img src="img/slider-1.jpg width="698" height="413" alt="slider-1"">
+					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
+					<img src="../Nerds/img/slider-1.jpg width="698" height="413" alt="slider-1"">
 				</li>
 
 				<li class="slider-2">
@@ -48,10 +46,8 @@
 					<p class="slider-text">Никакого креатива, только математические формулы<br>
 						для расчета идеальных пропорций						
 					</p>
-					<form action="https//:www.nerds.ru/info.html">
-						<button type="submit">Узнать больше</button>
-					</form>
-					<img src="img/slider-2.jpg width="698" height="413" alt="slider-2"">
+					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
+					<img src="../Nerds/img/slider-2.jpg width="698" height="413" alt="slider-2"">
 				</li>
 
 				<li class="slider-3">
@@ -61,10 +57,8 @@
 					<p class="slider-text">Работать днем, как все? Мы против этого.<br>
 						Ближе к полуночи работа только начинается.						
 					</p>
-					<form action="https//:www.nerds.ru/info.html">
-						<button type="submit">Узнать больше</button>
-					</form>
-					<img src="img/slider-3.jpg width="698" height="413" alt="slider-3"">
+					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
+					<img src="../Nerds/img/slider-3.jpg width="698" height="413" alt="slider-3"">
 				</li>
 			</ul>
 
@@ -91,36 +85,30 @@
 
 			<ul class="product-list">
 				<li class="product-1">
-					<img src="img/product-1.jpg width="300" height="146" alt="product-1"">
+					<img src="../Nerds/img/product-1.jpg width="300" height="146" alt="product-1"">
 					<p class="product-header">Веб-сайты</p>
 					<p>Мир никогда не будет прежним<br>
 						после того, как увидит Ваш сайт!						
 					</p>
-					<form action="https//:www.nerds.ru/buy.html">
-						<button type="submit">Заказать</button>
-					</form>
+					<a href="https://adenworker.github.io/Nerds/catalog.html">Заказать</a>
 				</li>
 
 				<li class="product-2">
-					<img src="img/product-2.jpg width="300" height="146" alt="product-2"">
+					<img src="../Nerds/img/product-2.jpg width="300" height="146" alt="product-2"">
 					<p class="product-header">Приложения</p>
 					<p>Покорите топ-10 приложений в<br>
 						AppStore и Google Play						
 					</p>
-					<form action="https//:www.nerds.ru/buy.html">
-						<button type="submit">Заказать</button>
-					</form>
+					<a href="https://adenworker.github.io/Nerds/catalog.html">Заказать</a>
 				</li>
 
 				<li class="product-3">
-					<img src="img/product-3.jpg width="300" height="146" alt="product-3"">
+					<img src="../Nerds/img/product-3.jpg width="300" height="146" alt="product-3"">
 					<p class="product-header">Презентации</p>
 					<p>Вы даже не подозреваете,<br>
 						насколько Вы изумительны!						
 					</p>
-					<form action="https//:www.nerds.ru/buy.html">
-						<button type="submit">Заказать</button>
-					</form>
+					<a href="https://adenworker.github.io/Nerds/catalog.html">Заказать</a>
 				</li>
 			</ul>
 			
@@ -138,7 +126,7 @@
 			<p>Веб-сайтов любой сложности<br>
 			Мобильных приложений для iOS и Android<br>
 			Слайдшоу и видео для корпоративных презентаций</p>
-			<img src="img/logo2.svg">
+			<img src="../Nerds/img/logo2.svg">
 			<p class="presentation-underheader-2">с 2004 года Любим точность во всем:</p>
 			<p>
 				<ul class="advantages-list">
@@ -159,16 +147,16 @@
 			<div class="our-clients">
 				<ul class="clients-list">
 					<li>
-						<img src="img/logo-1">
+						<a href="#"><img src="../Nerds/img/logo-1"></a>
 					</li>
 					<li>
-						<img src="img/logo-2">
+						<a href="#"><img src="../Nerds/img/logo-2"></a>
 					</li>
 					<li>
-						<img src="img/logo-3">
+						<a href="#"><img src="../Nerds/img/logo-3"></a>
 					</li>
 					<li>
-						<img src="img/logo-4">
+						<a href="#"><img src="../Nerds/img/logo-4"></a>
 					</li>
 				</ul>
 			</div>
@@ -181,7 +169,7 @@
 
 		<section class="modal modal-map">
 			<h2 class="visually-hidden">Как до нас добраться</h2>
-			<span class="modal-close">x</span>
+			<button class="modal-close" type="button">Закрыть</button>
 		</section>
 		
 		<div class="map-hover">
@@ -197,9 +185,9 @@
 		
 		<div class="footer-social">
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#">Вконтакте</a></li>
-				<li><a class="social-button" href="#">Фейсбук</a></li>
-				<li><a class="social-button" href="#">инстаграм</a></li>
+				<li><a class="social-button" href="https://vk.com"><img src="../Nerds/img/vk.svg" alt="Вконтакте"></a></li>
+				<li><a class="social-button" href="https://www.facebook.com"><img src="../Nerds/img/fb.svg" alt="Фейсбук"></a></li>
+				<li><a class="social-button" href="https://www.instagram.com"><img src="../Nerds/img/insta.svg" alt="Инстаграм"></a></li>
 			</ul>			
 		</div>
 
