--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -169,6 +169,9 @@
 
 		<section class="modal modal-map">
 			<h2 class="visually-hidden">Как до нас добраться</h2>
+			<p>
+			<img src="../Nerds/img/map.jpg" width="1440" height="420" alt="Офис компании находится по адресы ул. Большая Конюшенная 19/8, Санки-Петербург">
+			</p>
 			<button class="modal-close" type="button">Закрыть</button>
 		</section>
 		
