--- a/Nerds/catalog.html
+++ b/Nerds/catalog.html
@@ -9,7 +9,7 @@
 
 	<header class="main-header">
 		<nav class="main-mavigation">
-			<a class="header-logo"><img src="../Nerds/img/logo1.svg" width="150" height="40" alt="Логотип дизайн-студии NЁRDS"></a>
+			<a class="header-logo"><img src="../Nerds/img/nerds-logo.svg" width="150" height="40" alt="Логотип дизайн-студии NЁRDS"></a>
 			<ul class="site-navigation">
 				<li><a href="index.html">Студия</a></li>
 				<li><a href="clients.html">Клиенты</a></li>
