--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header class="main-header">
 		<nav class="main-mavigation">
-			<a class="header-logo"><img src="../Nerds/img/logo1.svg" width="150" height="40" alt="Логотип дизайн-студии NЁRDS"></a>
+			<a class="header-logo"><img src="../Nerds/img/nerds-logo.svg" width="150" height="40" alt="Логотип дизайн-студии NЁRDS"></a>
 			<ul class="site-navigation">
 				<li class="site-navigation-current"><a href="index.html">Студия</a></li>
 				<li><a href="clients.html">Клиенты</a></li>
