--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -147,16 +147,16 @@
 			<div class="our-clients">
 				<ul class="clients-list">
 					<li>
-						<a href="#"><img src="../Nerds/img/logo-1"></a>
+						<a href="#"><img src="../Nerds/img/client-1.png"></a>
 					</li>
 					<li>
-						<a href="#"><img src="../Nerds/img/logo-2"></a>
+						<a href="#"><img src="../Nerds/img/client-2.png"></a>
 					</li>
 					<li>
-						<a href="#"><img src="../Nerds/img/logo-3"></a>
+						<a href="#"><img src="../Nerds/img/client-3.png"></a>
 					</li>
 					<li>
-						<a href="#"><img src="../Nerds/img/logo-4"></a>
+						<a href="#"><img src="../Nerds/img/client-4.png"></a>
 					</li>
 				</ul>
 			</div>
