--- a/Nerds/catalog.html
+++ b/Nerds/catalog.html
@@ -97,11 +97,11 @@
 			<p class="filter-results-heading">Сортировать:</p>
 			<p>
 				<ul class="filter-results-options">
-					<li class="filter-results-option pagination-item-current"><button type="submit">По цене</button></li>
-					<li class="filter-results-option"><button type="submit">По типу</button></li>
-					<li class="filter-results-option"><button type="submit">По названию</button></li>
-					<li class="filter-results-option"><button type="submit"><img src="../Nerds/img/filter-button-down.svg"></button></li>
-					<li class="filter-results-option"><button type="submit"><img src="../Nerds/img/filter-up-down.svg"></button></li>
+					<li class="filter-results-option pagination-item-current"><a href="#">По цене</a></li>
+					<li class="filter-results-option"><a href="#">По типу</a></li>
+					<li class="filter-results-option"><a href="#">По названию</button></li>
+					<li class="filter-results-option"><a href="#"><img src="../Nerds/img/filter-button-down.svg"></a></li>
+					<li class="filter-results-option"><a href="#"><img src="../Nerds/img/filter-up-down.svg"></a></li>
 				</ul>
 			</p>
 
