--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -144,22 +144,23 @@
 					</li>
 				</ul>
 			</p>
-			<div class="our-clients">
+			<section class="our-clients">
+				<h2 class="visually-hidden">Наши клиенты</h2>
 				<ul class="clients-list">
 					<li>
-						<a href="#"><img src="../Nerds/img/client-1.png"></a>
+						<a href="#"><img src="../Nerds/img/client-1.png" alt="Html Academy"></a>
 					</li>
 					<li>
-						<a href="#"><img src="../Nerds/img/client-2.png"></a>
+						<a href="#"><img src="../Nerds/img/client-2.png" alt="Барбершоп Бородинский"></a>
 					</li>
 					<li>
-						<a href="#"><img src="../Nerds/img/client-3.png"></a>
+						<a href="#"><img src="../Nerds/img/client-3.png" alt="Pink"></a>
 					</li>
 					<li>
-						<a href="#"><img src="../Nerds/img/client-4.png"></a>
+						<a href="#"><img src="../Nerds/img/client-4.png" alt="Mishka"></a>
 					</li>
 				</ul>
-			</div>
+			</section>
 			
 		</section>
 
